--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -9,11 +9,11 @@
   <h1>Dynamic Quote Generator</h1>
   <div id="quoteDisplay"></div>
   <button id="newQuote">Show New Quote</button>
-  <div>
+  <!-- <div>
     <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
     <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
     <button id="addQuote">Add Quote</button>
-  </div>
+  </div> -->
   <script src="script.js"></script>
 
 </body>
