--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -15,6 +15,7 @@
     <button id="addQuote">Add Quote</button>
   </div> -->
   <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
+  <button>Export Quotes</button>
   <script src="script.js"></script>
 
 </body>
