--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -14,8 +14,8 @@
     <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
     <button id="addQuote">Add Quote</button>
   </div> -->
-  <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
-  <button>Export Quotes</button>
+  <!-- <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
+  <button>Export Quotes</button> -->
   <script src="script.js"></script>
 
 </body>
